fixed background not showing

--- a/src/styles/Content.module.scss
+++ b/src/styles/Content.module.scss
@@ -12,7 +12,6 @@
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
-  background-image: url("background.svg");
   background-color: $bgBottom;
 }
 
